--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             </div>
         </section>
         <section class="experience" id="experience">
+            <h2 class="heading">Experience</h2>
             <div class="timeline">
                 <div class="container left-container experience-hidden">
                     <img src="images/Accenture.png">
@@ -59,7 +60,7 @@
         <section class="projects" id="projects">
             <h2 class="heading">Projects</h2>
             <div class="projects-container">
-                <div class="projects-box">
+                <div class="project-box project-hidden">
                     <img src="images/whatsapp-bots.png">
                     <div class="project-layer">
                         <h4>COVID Data Tracker</h4>
@@ -67,9 +68,7 @@
                         <a href="#"><i class='bx bx-link-external'></i></a>
                     </div>
                 </div>
-            </div>
-            <div class="projects-container">
-                <div class="projects-box">
+                <div class="project-box project-hidden">
                     <img src="images/PDF.png">
                     <div class="project-layer">
                         <h4>PDF Manager</h4>
@@ -77,9 +76,7 @@
                         <a href="#"><i class='bx bx-link-external'></i></a>
                     </div>
                 </div>
-            </div>
-            <div class="projects-container">
-                <div class="projects-box">
+                <div class="project-box project-hidden">
                     <img src="images/PDF.png">
                     <div class="project-layer">
                         <h4>Project 3</h4>
