--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header class="header">
-            <a href="#" class="logo">Portfolio</a>
+            <a href="#" class="logo"></a>
 
             <i class='bx bx-menu' id = "menu-icon"></i>
 
@@ -85,6 +85,21 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <section class="contact" id="contact">
+            <h2 class="heading">Contact <span>me</span></h2>
+            <form action="#">
+                <div class="input-box">
+                    <input type="text" placeholder="Full Name">
+                    <input type="email" placeholder="Email Address">
+                </div>
+                <div class="input-box">
+                    <input type="number" placeholder="Mobile Number">
+                    <input type="text" placeholder="Email SUbject">
+                </div>
+                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+                <input type="submit" value="Send Message" class="btn">
+            </form>
         </section>
         <script src="js/script.js"></script>
     </body>
